--- a/MHMS/src/main/resources/static/bootstrap/css/material-dashboard.css
+++ b/MHMS/src/main/resources/static/bootstrap/css/material-dashboard.css
@@ -15562,6 +15562,13 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   background: rgba(200, 200, 200, 0.2);
 }
 
+.fragment-main {
+	position: relative;
+	float: right;
+	width: 100%;
+	transition: 0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1);
+}
+
 .main-panel {
   position: relative;
   float: right;
